2008-12-02  Claude Paroz  <claude@2xlibre.net>

	* stats/models.py: Launch the update_stats method asynchronously when
	creating a new branch.

2008-12-01  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	Same feature as previous commit, just more simple!
	
	* common/templatetags/list_to_columns.py: New name and updated.
	* common/templatetags/list_to_three_columns.py:
	* media/css/style.css: Only one column definition.
	* templates/module_list.html:
	* templates/languages/language_list.html: Natural column order.
	
2008-11-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	Replace the CSS 3 attribute 'column-count' (and relatives) by a
	more ordinary CSS layout (fix strange behaviour with FF3 and works
	with IE).
	
	* common/templatetags:
	* common/templatetags/__init__.py:
	* common/templatetags/list_to_three_columns.py: New template tag
	to split a list into 3 columns.	
	* media/css/style.css: Added 3 columns layout.
	* settings_sample.py: Added common app.
	* templates/languages/language_list.html: 
	* templates/module_list.html: Use the new template tag.

2008-11-30  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* templates/admin/base_site.html: Link to the Home page and admin
	interface title.

2008-11-27  Claude Paroz  <claude@2xlibre.net>

	* templates/people/person_list.html: Simplify and fix people image
	display.

2008-11-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* people/urls.py: Fixed people list.

2008-11-27  Claude Paroz  <claude@2xlibre.net>

	* media/img/edit.png: Icon for editing.
	* people/urls.py: Add the possibility to display people by username.
	* stats/models.py: New method can_edit_branches for checking permissions.
	Add pre_save check for Branch to verify existence prior to creation.
	* stats/templatetags/stats_extras.py: Custom template filter to join text
	with url, suitable for translatable string without url.
	* templates/module_edit_branches.html:
	* stats/forms.py: 